--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header class="cabeçalho"></headerclass>
-        
-    <h1>Aqui é uma imagem</h1>
-    <ul>
-        <li>Escolas</li>
-        <li>Estudantes</li>
+    <img class="cabeçalho-imagem" src="brasao ccm.png" alt="Brasão do Colégio Civico Militar">
+    <ul class="cabeçalho-lista">
+        <li class="cabeçalho-lista-item">Escola</li>
+        <li class="cabeçalho-lista-item">Estudante</li>
     </ul>
+     </header>
 
-    </header>
 </body>
 </html>
