Terminei a seção escola

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Site Colégio Uruguai</title>
 <link rel="stylesheet" href="./estilo.css">
 </head>
+
 <body>
     <header class="cabeçalho"></headerclass>
     <img class="cabeçalho-imagem" src="brasao ccm.png" alt="Brasão do Colégio Civico Militar">
@@ -15,6 +16,14 @@
         <li class="cabeçalho-lista-item">Estudante</li>
     </ul>
      </header>
-
+     <section class="escola">
+        <h2 class="escola-titulo">Sobre o Colégio</h2>
+        <p class="escola-texto">Os Colégios Cívico-Militares buscam criar disciplina nos alunos, ensinando-os os princípios Cívicos e Militares, colocando-os no caminho correto da Cidadania. O Colégio República Oriental do Uruguai tornou-se Cívico-Militar em 2020.</p>
+        <p>Com uma grande infraestrutura, funcionários competentes, salas próprias para cada tipo de atividade e um grêmio estudantil, é um dos melhores no ramo. Foi a primeira escola do Estado do Paraná a se tornar Cívico-Militar.</p>
+        <img class="escola-imagem" src="image 1.png"  alt="fotografia da frente do colégio">
+        <img class="escola-imagem" src="image 2.png"  alt="fotografia da quadra do colégio">
+        <img class="escola-imagem-3" src="image 3.png"  alt="fotografia de um evento no colégio">
+    </section>
 </body>
+
 </html>
