Site completo, a principio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Colégio Uruguai</title>
-<link rel="stylesheet" href="./estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,13 +20,32 @@
     </ul>
      </header>
      <section class="escola">
-        <h2 class="escola-titulo">Sobre o Colégio</h2>
+        <h2 class="escola-titulo">Sobre o Colégio: CCM República Oriental do Uruguai</h2>
         <p class="escola-texto">Os Colégios Cívico-Militares buscam criar disciplina nos alunos, ensinando-os os princípios Cívicos e Militares, colocando-os no caminho correto da Cidadania. O Colégio República Oriental do Uruguai tornou-se Cívico-Militar em 2020.</p>
         <p>Com uma grande infraestrutura, funcionários competentes, salas próprias para cada tipo de atividade e um grêmio estudantil, é um dos melhores no ramo. Foi a primeira escola do Estado do Paraná a se tornar Cívico-Militar.</p>
         <img class="escola-imagem" src="image 1.png"  alt="fotografia da frente do colégio">
         <img class="escola-imagem" src="image 2.png"  alt="fotografia da quadra do colégio">
         <img class="escola-imagem-3" src="image 3.png"  alt="fotografia de um evento no colégio">
     </section>
+    <section class="estudante"> 
+          <h2 class="estudante-titulo">Estudantes: Quem somos?</h2>
+          <div class="estudante-todos">  
+        
+          <div class="estudante-div">
+            <img class="estudante-imagem" src="545d6a2afd65bdfc77e965b4fe44b93a 1.png" alt="foto do yandi">
+            <h3 class="estudante-nome">Yuri Augusto</h3>
+            <a href="https://www.instagram.com/yurisoldadodejesus/"><img class="estudante-icone" src="instagram (1).png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem-2" src="3b356427bf9443b832f49e1eea671617 1.png" alt="foto do kaua">
+            <h3 class="estudante-nome">Kauã Fernandes</h3>
+            <a href="https://www.instagram.com/kau_fgl/"><img class="estudante-icone" src="instagram (1).png" alt="icone instagram"></a>
+        </div>
+        </div>
+    </section>
+    <footer class="rodape">
+        <a href="https://www.facebook.com/profile.php?id=100064157767049"><img class="rodape-imagem" src="logo colegio.png" alt="rodape do brasao"></a>
+    </footer>
 </body>
 
 </html>
